<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/UmpireBuddy_MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Strike_text"
        android:id="@+id/Strike_text"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Strike_button"
        android:layout_marginTop="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Ball_text"
        android:id="@+id/Ball_text"
        android:layout_below="@+id/Strike_text"
        android:layout_alignEnd="@+id/Strike_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Strike_count"
        android:id="@+id/Strike_count"
        android:layout_alignTop="@+id/Strike_text"
        android:layout_alignStart="@+id/Ball_count" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Ball_count"
        android:id="@+id/Ball_count"
        android:layout_alignTop="@+id/Ball_text"
        android:layout_alignEnd="@+id/Ball_button"
        android:layout_marginEnd="19dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Strike_button_text"
        android:id="@+id/Strike_button"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/Ball_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ball_button_text"
        android:id="@+id/Ball_button"
        android:layout_below="@+id/Strike_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
